# public-images

./: .gitignore  CLAUDE.md  README.md  datascience.docker  dependencies.toml  entrypoint.sh  gh-actions.sh  init.evcxr  jupyter_server_config.py  latex.docker  net-datascience.docker  pyproject.toml  pytorch-gpu.toml  pytorch.toml  quarto-datascience.docker  quarto-science.docker  rust-datascience.docker  start-jupyter.sh
.github/: copilot-instructions.md
.github/workflows/: datascience.yml
