[project]
name = "jupyter"
version = "0.1.0"
description = "datascience"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "polars",
    "numpy",
    "seaborn",
    "plotly",
    "duckdb[all]",
    "torch",
    "torchvision",
    "scikit-learn",
    "statsmodels",
    "pymc",
    "numba",
    "xgboost",
    "cvxpy",
    "osqp",
    "dask[dataframe]",
    "dask-kubernetes",
    "distributed",
    "dask-cloudprovider",
    "bokeh",
    "graphviz",
    "kaleido",
    "tables",
    "h5py",
    "pyarrow",
    "s3fs",
    "aiobotocore",
    "fastapi",
    "orjson",
    "uvicorn",
    "aiofiles",
    "aiohttp",
    "openpyxl",
    "lxml",
    "ipywidgets",
    "tqdm",
    "cachetools",
    "marimo",
    "more-itertools",
    "retrying",
    "databento",
    "click",
    "boto3",
    "playwright",
]

[dependency-groups]
dev = [
    "ipykernel",
    "types-cachetools",
]
